implemented stylus, last commit before review

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html
   body
     block content
     +javascript_include_tag('application')
-    +javascript_include_tag('models/todos')
+    +javascript_include_tag('models/todo')
     +javascript_include_tag('collections/todos')
     +javascript_include_tag('views/todolistview', 'views/modalview', 'views/sidebarview')
     script(type="text/javascript").
