--- a/handlebars/modal_form.hbs
+++ b/handlebars/modal_form.hbs
@@ -1,5 +1,5 @@
 <form action="todos.html" class="{{type}}">
-<input type="hidden" value="{{id}}">
+<input type="hidden" name="id" value="{{id}}">
   <dl>
     <dt>Title</dt>
     <dd><input type="text" 
