--- a/handlebars/par_todo_item.hbs
+++ b/handlebars/par_todo_item.hbs
@@ -7,7 +7,7 @@
   {{/with}}
   data-date="{{getDate}}">
   <td class="main">
-  <a href="#">{{attributes.title}} - {{getDate}}
+  <a href="#" class="edit">{{attributes.title}} - {{getDate}}
   </a>
   </td>
   <td class="trash"><img src="assets/trash-bin.png" alt="trash"></td>
